# ft_printf_with_tester

./: .gitignore  CMakeLists.txt  Makefile  a.out  convert_dec_to_hexstr.c  ft_bzero.c  ft_calloc.c  ft_convert_dec_to_hexstr.c  ft_memset.c  ft_print_c.c  ft_print_lx.c  ft_print_p.c  ft_print_s.c  ft_print_x.c  ft_printf.c  ft_printf.h  ft_putchar_fd.c  ft_puthexbignbr.c  ft_puthexnbr.c  ft_putnbr_fd.c  ft_putpointer.c  ft_putstr.c  ft_putstr_non_printable.c  ft_strlen.c  ft_toupper.c  libft.h  print_c.c  print_d_and_u.c  print_lx.c  print_p.c  print_percent.c  print_s.c  print_u.c  print_x.c  printf_test.c
a.out.dSYM/Contents/Resources/DWARF/: a.out
printf_tester/: CMakeLists.txt  Makefile  gtest.cpp
test/: a.out  main.c  main.s  main_1.s  validate_cast.c
